--- a/Assignment_3.ipynb
+++ b/Assignment_3.ipynb
@@ -3,14 +3,14 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Assignment 3",
+      "name": "Assignment_3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO1BRP+BIc0w5JpMJjm+lKY",
+      "authorship_tag": "ABX9TyOpq+Xe7hCLv2HLDj4wg7id",
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
     },
     "language_info": {
       "name": "python"
@@ -28,22 +28,25 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "km1BUd85sKzC"
+        "id": "trl8kB9ziaAg"
       },
       "source": [
         ""
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
+          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
-        "id": "aP3dKLeCsJzK",
-        "outputId": "bf8e5c9d-f43d-492d-e2bc-b75983bcb98d"
+        "id": "4j8Edd6tie_I",
+        "outputId": "d78d0ba0-ef3a-4dd8-8b1e-e6b78c5cc269"
       },
       "source": [
         "import pandas as pd\n",
@@ -55,7 +58,7 @@
         "m=1\n",
         "c=-1\n",
         "n=0.1\n",
-        "epochs=2\n",
+        "epochs=100\n",
         "x=symbols('x')\n",
         "y=symbols('y')\n",
         "l=len(d2)\n",
@@ -63,7 +66,7 @@
         "  for j in range(l):\n",
         "    gm=-(y-m*x-c)*x\n",
         "    gc=-(y-m*x-c)\n",
-        "    print(j)\n",
+        "    #print(j)\n",
         "    x1=d2.iloc[j,0]\n",
         "    y1=d2.iloc[j,1]\n",
         "    gm1=gm.subs([(x,x1),(y,y1)])\n",
@@ -74,9 +77,11 @@
         "    newc = c + deltac\n",
         "    m=newm\n",
         "    c=newc\n",
-        "    print(m,c)\n",
-        "print(\"final m value=\",m)\n",
-        "print(\"final c value=\",c)"
+        "    #print(m,c)\n",
+        "fm=round(m,2)\n",
+        "fc=round(c,2)\n",
+        "print(\"final m value=\",fm)\n",
+        "print(\"final c value=\",fc)\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -89,24 +94,8 @@
             "1  0.4  3.8\n",
             "2  0.6  4.2\n",
             "3  0.8  4.6\n",
-            "0\n",
-            "1.08400000000000 -0.580000000000000\n",
-            "1\n",
-            "1.24185600000000 -0.185360000000000\n",
-            "2\n",
-            "1.46027078400000 0.178664640000000\n",
-            "3\n",
-            "1.72052028262400 0.503976513280000\n",
-            "0\n",
-            "1.77155867122790 0.759168456299520\n",
-            "1\n",
-            "1.86484699423628 0.992389263820452\n",
-            "2\n",
-            "1.99016914661454 1.20125951778423\n",
-            "3\n",
-            "2.13469755980847 1.38192003427664\n",
-            "final m value= 2.13469755980847\n",
-            "final c value= 1.38192003427664\n"
+            "final m value= 2.14\n",
+            "final c value= 2.92\n"
           ],
           "name": "stdout"
         }
